[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/main_font.tres" type="Theme" id=1]
[ext_resource path="res://scripts/interface/menu_item.gd" type="Script" id=2]
[ext_resource path="res://fonts/game-icons/game-icons.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )
_sections_unfolded = [ "Resource" ]

[node name="menu_item" type="Button"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 0
script = ExtResource( 2 )

[node name="wrapper" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Theme", "custom_constants" ]

[node name="indicator" type="Label" parent="wrapper" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 12.0
margin_right = 16.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = ">"
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="label" type="Label" parent="wrapper" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 10.0
margin_right = 135.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "menu item"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[connection signal="focus_entered" from="." to="." method="_on_menu_item_focus_entered"]

[connection signal="focus_exited" from="." to="." method="_on_menu_item_focus_exited"]

[connection signal="pressed" from="." to="." method="_on_menu_item_pressed"]


